add unix data ui and class

--- a/UnixProgramTest/qml.qrc
+++ b/UnixProgramTest/qml.qrc
@@ -4,5 +4,6 @@
         <file>LeftBarButton.qml</file>
         <file>FormConfig.qml</file>
         <file>FormFile.qml</file>
+        <file>FormUnixData.qml</file>
     </qresource>
 </RCC>
