--- a/UnixProgramTest/qml.qrc
+++ b/UnixProgramTest/qml.qrc
@@ -5,5 +5,6 @@
         <file>FormConfig.qml</file>
         <file>FormFile.qml</file>
         <file>FormUnixData.qml</file>
+        <file>FormShadowData.qml</file>
     </qresource>
 </RCC>
