--- a/zsyncfile/image.qrc
+++ b/zsyncfile/image.qrc
@@ -4,5 +4,8 @@
         <file>Res/f.png</file>
         <file>Res/array.png</file>
         <file>Res/pp.png</file>
+        <file>Res/title.png</file>
+        <file>Res/close.png</file>
+        <file>Res/window_shadow.png</file>
     </qresource>
 </RCC>
