--- a/zsyncfile/image.qrc
+++ b/zsyncfile/image.qrc
@@ -7,5 +7,6 @@
         <file>Res/title.png</file>
         <file>Res/close.png</file>
         <file>Res/window_shadow.png</file>
+        <file>Res/bk.png</file>
     </qresource>
 </RCC>
